# job-search-web-app

./: README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: applicants.py  auth.py  interview.py
app/core/: config.py
app/db/: base.py  database.py
app/dependencies/: applicant.py  auth.py  faker.py  interview.py  permission.py  user.py  user_role.py
app/exceptions/: applicant.py  auth.py  exceptions.py  permission.py  user_role.py
app/models/: __init__.py  applicant.py  candidate_skill.py  city.py  company.py  country.py  education.py  education_level.py  employer.py  employment_type.py  eployment_type.py  permission.py  professional_field.py  refresh_token.py  region.py  response.py  response_status.py  resume.py  resume_city.py  resume_employment_type.py  resume_professional_field.py  resume_work_location_type.py  user.py  user_role.py  user_role_permission.py  user_type.py  vacancy.py  vacancy_city.py  vacancy_employment_type.py  vacancy_professional_field.py  vacancy_work_location_type.py  work_experience.py  work_location_type.py
app/repositories/: applicant_repo.py  interview_repo.py  permission_repo.py  refresh_token_repo.py  user_repo.py  user_role_repo.py
app/schemas/: applicant.py  auth.py  interview.py  permission.py  user.py
app/services/: applicant_service.py  auth_service.py  interview_service.py  permission_service.py
app/utils/: auth.py  faker.py  interview.py
job_search_web_app/: main.py
job_search_web_app/core/: config.py
job_search_web_app/db/: base.py  database.py
job_search_web_app/models/: user.py  user_type.py
(+36 files in other folders)
